--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -16,34 +16,54 @@
 		text-align: center;
 		position: relative;
 		margin-bottom: 3rem;
+		text-transform: uppercase;
+		@include stainlessbold;
+		line-height: 1.3;
 
 		@include breakpoint(medium) {
 			text-align: left;
 			margin-bottom: 1rem;
 		}
+
+		@include breakpoint(large) {
+			font-size: 3.3rem;
+			line-height: 1.2 !important;
+		}
+	}
+}
+
+.hero-content {
+	@include breakpoint(large) {
+		padding-right: 5rem !important;
+		padding-left: 2rem !important;
 	}
 }
 
 .hero-content h1:after {
-
+	font-style: italic;
 	content: '"';
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	bottom: -5.5rem;
-	font-size: 300%;
+	bottom: -6.3rem;
+	font-size: 350%;
 
 		@include breakpoint(medium) {
-			left: 1rem;
-			bottom: -11rem;
+			left: 0.8rem;
+			bottom: -12.2rem;
 		}
+
+		@include breakpoint(large) {
+			bottom: -12.7rem;
+		}
+
 
 }
 
 .hero-content p {
 
 	@include breakpoint(medium) {
-		padding-left: 4rem;
+		padding-left: 6.5rem;
 	}
 }
 
@@ -69,22 +89,41 @@
 	}
 
 	.slogan {
+		@include stainlessbold;
+		text-transform: uppercase;
 		color: #fff;
 		text-align: center;
 		position: relative;
-		font-size: 400%;
+		font-size: 160%;
+		margin-bottom: 2rem;
+		padding-top: 3rem;
+		line-height: 1.3;
+
+		@include breakpoint(medium) {
+			font-size: 300%;
+			max-width: 800px;
+			margin: 0 auto 2.2rem auto;
+		}
 
 		&:before {
+			font-style: italic;
 			content: '"';
 			position: absolute;
 			left: 50%;
 			transform: translateX(-50%);
-			top: -1rem;
+			top: -1.7rem;
+			font-size: 400%;
+
+			@include breakpoint(medium) {
+				top: -4.5rem;
+			}
 		}
 	}
 }
 
 .page-hero .link-box {
+
+	@include stainlessbold;
 
 	.link-box-content {
 		width: 100%;
