--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -59,6 +59,7 @@ $foundation-palette: (
 $light-gray: #f2f4f6;
 $medium-gray: #e9ecf0;
 $dark-gray: #8a8a8a;
+$gray: #4d4d4d;
 $black: #0a0a0a;
 $white: #fff;
 $green: #a6ce39;
