--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }} Paperinkeräys tänään</title>
 	<link rel="stylesheet" href="{{root}}assets/css/app.css">
+	<link href="//cloud.webtype.com/css/466a1950-162f-42f4-9bad-008c076be921.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="{{page}}">
   <header>
