--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -7,6 +7,10 @@ html, body {
 	width: 100%;
 }
 
+body p, body a {
+	@include stainlesslight;
+}
+
 .lue-lisaa {
 	color: #fff;
 	background: $dark-green;
@@ -16,8 +20,10 @@ html, body {
 	border: 1px solid #fff;
 	margin: auto;
 	display: block;
+	margin-top: 2rem;
 	width: 100%;
 	max-width: 300px;
+	@include stainlesslight;
 	@include hover;
 
 	&:hover, &:focus {
@@ -34,6 +40,11 @@ html, body {
 		text-align: center;
 		padding: 0.2rem;
 		margin-bottom: 2rem;
+		@include stainlessbold;
+
+		@include breakpoint(medium) {
+			font-size: 1.8rem;
+		}
 }
 
 
@@ -46,10 +57,15 @@ html, body {
 
 	.first {
 		text-transform: uppercase;
+		margin-bottom: 0;
 	}
 
 	.number {
 		color: $dark-green;
+		font-size: 350%;
+		line-height: 1.3;
+		margin: 0;
+		@include stainlessblack;
 	}
 
 	&:nth-of-type(2) {
@@ -79,7 +95,7 @@ html, body {
 	text-align: center;
 	padding: 0.6rem;
 	width: 100%;
-	margin: 0 auto 1.5rem auto;
+	margin: 2rem auto 1.5rem auto;
 	display: block;
 	@include hover;
 
