--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -28,6 +28,7 @@ header {
 	margin-top: 1.2rem;
 	padding: 1rem 0 0.4rem;
 	border-top: 1px solid #ebebeb;
+	@include stainlesslight;
 
 	ul {
 		list-style: none;
