Added background images for Front Page sections and skip-link to header

--- a/src/assets/scss/_front-page.scss
+++ b/src/assets/scss/_front-page.scss
@@ -65,3 +65,9 @@
 	background-size: cover;
 	color: #fff;
 }
+
+.organisaatio {
+	background-image: url('../../assets/img/kerays-white.svg');
+	background-position: center;
+	background-size: cover;
+}
