Added content to pages

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -33,6 +33,7 @@
 		<li class="jatehuolto-link"><a href="{{root}}jatehuolto.html">Jätehuolto</a></li>
 		<li class="tietoturva-link"><a href="{{root}}tietoturva.html">Tietoturva</a></li>
 		<li class="kuormalava-link"><a href="{{root}}kuormalava.html">Kuormalava</a></li>
+		<li class="tuottajavastuu-link"><a href="{{root}}tuottajavastuu.html">Tuottajavastuu</a></li>
 		<li class="paperinkerays-link"><a href="http://www.paperinkerays.fi/" target="_blank">paperinkeräys.fi</a></li>
     </ul>
    </nav>
