--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -38,7 +38,7 @@ body p, body a {
 }
 
 
-.front-page h2, .page-content h1, .page-content h2 {
+.front-page h2, .page-content h1 {
 		background: $dark-green;
 		color: #fff;
 		text-transform: uppercase;
