--- a/src/assets/scss/_page-content.scss
+++ b/src/assets/scss/_page-content.scss
@@ -1,6 +1,32 @@
 .page-content {
 	padding: 2.5rem 0.5rem;
+
+	h2, h3, h4, h5, h6 {
+		color: $black;
+		line-height: 1.3;
+		font-size: 1.5rem;
+		text-align: left;
+		@include stainlessbold;
+		margin: 2rem 0 1rem;
+		text-transform: uppercase;
+	}
+
+	.avainluvut-heading {
+		background: $dark-green;
+		color: #fff;
+		text-transform: uppercase;
+		text-align: center;
+		padding: 0.2rem;
+		margin-bottom: 2rem;
+		@include stainlessbold;
+
+		@include breakpoint(medium) {
+			font-size: 1.8rem;
+		}
+	}
 }
+
+
 
 .columns.content-image {
 	padding: 0 1.3rem;
