Added 3 x YouTube videos

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -122,11 +122,11 @@
 }
 
 .page-hero .link-box {
-
 	@include stainlessbold;
 	color: $black !important;
 
 	.link-box-content {
+		height: 93px;
 		width: 100%;
 		max-width: 100%;
 		background: #fff;
