Link box font styles

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -122,8 +122,14 @@
 }
 
 .page-hero .link-box {
+
 	@include stainlessbold;
 	color: $black !important;
+
+	a {
+		@include stainlessbold;
+		color: $black !important;
+	}
 
 	.link-box-content {
 		height: 93px;
