--- a/src/partials/avainluvut.html
+++ b/src/partials/avainluvut.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="columns small-6 large-3 avainluku">
-	<p class="first">Joku luku</p>
-	<p class="number">15</p>
-	<p>prosenttia</p>
+	<p class="first">Asiakastyytyväisyys</p>
+	<p class="number">4,24/5</p>
+	<p>&nbsp;</p>
 </div>
