Same page layout for ‘Paakirjoitus’

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -165,6 +165,25 @@
 
 .hero-jatehuolto {
 	background: url('../../assets/img/jatehuolto.jpg');
+}
+
+.hero-tietoturva {
+	background: url('../../assets/img/jatehuolto.jpg');
+}
+
+.hero-kuormalava {
+	background: url('../../assets/img/jatehuolto.jpg');
+}
+
+.hero-tuottajavastuu {
+	background: url('../../assets/img/jatehuolto.jpg');
+}
+
+.hero-paakirjoitus {
+	background: url('../../assets/img/jatehuolto.jpg');
+}
+
+.page-hero {
 	background-size: cover;
 	background-position: top center;
 }
