Added images for the site

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -168,11 +168,11 @@
 }
 
 .hero-tietoturva {
-	background: url('../../assets/img/jatehuolto.jpg');
+	background: url('../../assets/img/tietoturva.jpg');
 }
 
 .hero-kuormalava {
-	background: url('../../assets/img/jatehuolto.jpg');
+	background: url('../../assets/img/kuormalavat.jpg');
 }
 
 .hero-tuottajavastuu {
@@ -180,7 +180,7 @@
 }
 
 .hero-paakirjoitus {
-	background: url('../../assets/img/jatehuolto.jpg');
+	background: url('../../assets/img/paakirjoitus.jpg');
 }
 
 .page-hero {
