--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -181,6 +181,15 @@
 
 .hero-paakirjoitus {
 	background: url('../../assets/img/paakirjoitus.jpg');
+	height: 13rem;
+
+	@include breakpoint(medium) {
+		height: 20rem;
+	}
+
+	@include breakpoint(large) {
+		height: 32rem;
+	}
 }
 
 .page-hero {
