--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -136,12 +136,12 @@
 		height: 60px;
 		width: 100%;
 		max-width: 100%;
-		background: $green;
+		background: $dark-green;
 		padding: 0 1rem;
 		margin-bottom: 1rem;
 
 		@include breakpoint(medium) {
-			width: 400px;
+			width: 330px;
 		}
 	}
 
@@ -177,7 +177,7 @@
 }
 
 .hero-tuottajavastuu {
-	background: url('../../assets/img/jatehuolto.jpg');
+	background: url('../../assets/img/tuottajavastuu.jpg');
 }
 
 .hero-paakirjoitus {
