Fixed typo in header links

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -34,7 +34,7 @@
 		<li class="tietoturva-link"><a href="{{root}}tietoturva.html">Tietoturva</a></li>
 		<li class="kuormalava-link"><a href="{{root}}kuormalava.html">Kuormalava</a></li>
 		<li class="tuottajavastuu-link"><a href="{{root}}tuottajavastuu.html">Tuottajavastuu</a></li>
-		<li class="paperinkerays-link"><a href="http://www.paperinkerays.fi/" target="_blank">paperinkeräys.fi</a></li>
+		<li class="paperinkerays-link"><a href="http://www.paperinkerays.fi/" target="_blank">paperinkerays.fi</a></li>
     </ul>
    </nav>
  </div>
