Center infogr box in ‘Tuottajavastuu’ hero

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -223,3 +223,9 @@
 	background: #000;
 	opacity: 0.3;
 }
+
+
+.hero-tuottajavastuu .link-box-content.infografiikka {
+	float: none;
+	margin: auto;
+}
