--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -63,14 +63,28 @@ body p, body a {
 	.first {
 		text-transform: uppercase;
 		margin-bottom: 0;
+		font-size: 75%;
+
+		@include breakpoint(large) {
+			font-size: 100%;
+		}
+
 	}
 
 	.number {
 		color: $dark-green;
-		font-size: 350%;
+		font-size: 290%;
 		line-height: 1.3;
 		margin: 0;
 		@include stainlessblack;
+
+		@include breakpoint(large) {
+			font-size: 320%;
+		}
+
+		@include breakpoint(large) {
+			font-size: 350%;
+		}
 	}
 
 	&:nth-of-type(2) {
