--- a/src/partials/avainluvut.html
+++ b/src/partials/avainluvut.html
@@ -18,6 +18,6 @@
 
 <div class="columns small-6 large-3 avainluku">
 	<p class="first">Asiakastyytyväisyys</p>
-	<p class="number">4,24/5</p>
-	<p>&nbsp;</p>
+	<p class="number">4,24</p>
+	<p>/ 5</p>
 </div>
