More padding for footer

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -61,7 +61,7 @@
 	text-align: center;
 	@include stainlessbold;
 
-	@include breakpoint(medium) {
+	@include breakpoint(large) {
 		padding-bottom: 0;
 	}
 
