Changes to footer and infogr buttons

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -160,6 +160,12 @@
 
 }
 
+.pk-infogr-link {
+	@include breakpoint(medium) {
+		width: 370px !important;
+	}
+}
+
 .page-hero .link-box img {
 	float: right;
 	max-height: 63px;
