--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -57,7 +57,7 @@
 
 		<div class="columns small-12 medium-4 materiaalit">
 			<h5>Materiaalit</h5>
-			<a href="#" target="_blank" class="materiaali">Vuosikirja (PDF)</a>
+			<a href="/assets/pdf/pk_tanaan_2017.pdf" target="_blank" class="materiaali">Paperinkeräys tänään 2017</a>
 		</div><!--/materiaalit-->
 
 		<div class="columns small-12 medium-4 yhteystiedot">
